--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Andreas Mausch
 email: andreas.mausch@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+baseurl: ""
+url: "http://andreas-mausch.github.io"
 twitter_username: 
 github_username:  
 
