--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: andreas.mausch@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
 
 baseurl: ""
-url: "http://andreas-mausch.de"
+url: "https://andreas-mausch.de"
 
 # Build settings
 markdown: kramdown
