--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -514,6 +514,9 @@ demoscene:
   - artist: Andromeda Software Development
     title: The Butterfly Effect
     youtube: https://www.youtube.com/watch?v=vF-eVnqq-bw
+  - artist: Conspiracy
+    title: Chaos Theory
+    youtube: https://www.youtube.com/watch?v=MAnhcUNHRW0
   - artist: Dio Espresso
     title: Instant God
     youtube: https://www.youtube.com/watch?v=2JzG-Y3YOdk
