--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -16,6 +16,9 @@ music:
       - movie: Les Choristes
         title: Les partitions
         youtube: https://www.youtube.com/watch?v=8x3dEQlfMq0
+      - movie: Man on Fire
+        title: The End
+        youtube: https://www.youtube.com/watch?v=KPfJZolQOPU
       - movie: Requiem for a Dream
         title: Main Theme
         youtube: https://www.youtube.com/watch?v=2LhaXf3iTHo
