--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,8 @@ url: "https://andreas-mausch.de"
 # Build settings
 markdown: kramdown
 permalink: pretty
+
+collections:
+  cheatsheets:
+    output: true
+    permalink: /:collection/:name
