--- a/resume-pdf/package.json
+++ b/resume-pdf/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "pdf": "chrome-headless-render-pdf --url=http://localhost:4000/resume/ --pdf=resume.pdf --include-background"
+    "pdf": "chrome-headless-render-pdf --url=http://localhost:4000/resume/ --pdf=resume.pdf --include-background --no-margins --paper-width=8.26 --paper-height=11.69"
   },
   "devDependencies": {
     "chrome-headless-render-pdf": "1.8.4"
