--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -56,11 +56,17 @@ music:
       - game: Need for Speed II SE
         title: Main Menu
         youtube: https://www.youtube.com/watch?v=69-J2m_GyhI
+      - game: One Must Fall 2097
+        title: Theme
+        youtube: https://www.youtube.com/watch?v=UvlVaQl7kEk
       - game: Portal
         title: The Device has been Modified
         youtube: https://www.youtube.com/watch?v=kuYT-d_fxpE
   songs:
     german:
+      - artist: A.i.d.S
+        title: Wir sind nicht grad die Schlausten
+        youtube: https://www.youtube.com/watch?v=B4HHmpa2B0o
       - artist: Animus
         title: Schatten der Gesellschaft (feat. Manuellsen)
         youtube: https://www.youtube.com/watch?v=u7grCa0E9XY
@@ -70,6 +76,9 @@ music:
       - artist: B-Tight
         title: Ich bin's
         youtube: https://www.youtube.com/watch?v=LePPt654LEE
+      - artist: Beatfabrik
+        title: Blutrot
+        youtube: https://www.youtube.com/watch?v=HjneXxfm_iw
       - artist: Bushido
         title: Bei Nacht
         youtube: https://www.youtube.com/watch?v=KxsYoIRsylU
@@ -107,6 +116,9 @@ music:
         title: Blockchef
         youtube: https://www.youtube.com/watch?v=JI7sO81V3fM
       - artist: Gzuz
+        title: Alles Echt 2
+        youtube: https://www.youtube.com/watch?v=1o9jQ_ATJCU
+      - artist: Gzuz
         title: Kein Problem (feat. Hanybal)
         youtube: https://www.youtube.com/watch?v=tKvpf7CtRok
       - artist: Haftbefehl
@@ -133,6 +145,9 @@ music:
       - artist: Hanybal
         title: Kopfgefickt
         youtube: https://www.youtube.com/watch?v=mmPxn3G3V4w
+      - artist: Haiyti
+        title: Sweet
+        youtube: https://www.youtube.com/watch?v=raWJghW8Q3s
       - artist: Karate Andi
         title: Drei Tage wach
         youtube: https://www.youtube.com/watch?v=NapPK_JEaPI
@@ -154,6 +169,9 @@ music:
       - artist: Kollegah
         title: Hoodtales III
         youtube: https://www.youtube.com/watch?v=HV_RAolbQXA
+      - artist: Kollegah
+        title: Untertreiberrap
+        youtube: https://www.youtube.com/watch?v=TF5HfTcQREM
       - artist: Kollegah
         title: Übernahmemodus
         youtube: https://www.youtube.com/watch?v=GU8K71hZMO0
@@ -199,6 +217,9 @@ music:
       - artist: Samy Deluxe
         title: Is nich wahr
         youtube: https://www.youtube.com/watch?v=z4laywgyyAI
+      - artist: Samy Deluxe
+        title: Samsimilias Rache
+        youtube: https://www.youtube.com/watch?v=ZETQkCaE7_I
       - artist: Shacke One
         title: Boss der Panke
         youtube: https://www.youtube.com/watch?v=zhQbjM-iX-M
@@ -242,6 +263,9 @@ music:
       - artist: Ängie
         title: Smoke Weed Eat Pussy
         youtube: https://www.youtube.com/watch?v=di3vhELi6P0
+      - artist: Arcana
+        title: Innocent Child (Bushido - Nie ein Rapper)
+        youtube: https://www.youtube.com/watch?v=oKqC5woiBHI
       - artist: A$AP Rocky
         title: Praise the Lord (feat. Skepta)
         youtube: https://www.youtube.com/watch?v=Kbj2Zss-5GY
@@ -272,6 +296,9 @@ music:
       - artist: Buraka Som Sistema
         title: IC19
         youtube: https://www.youtube.com/watch?v=voOSqm7KFz4
+      - artist: Chick Norris
+        title: Made Me Do
+        youtube: https://www.youtube.com/watch?v=UdcPrOmi2DE
       - artist: Chinese Man
         title: Escape
         youtube: https://www.youtube.com/watch?v=_YdmMVrAdCw
@@ -320,9 +347,15 @@ music:
       - artist: Eminem
         title: Till Hell Freezes Over
         youtube: https://www.youtube.com/watch?v=Nb3hjBEgprA
+      - artist: Enya
+        title: Boadicea (Fugees - Ready or Not)
+        youtube: https://www.youtube.com/watch?v=XM-dHIs1HzU
       - artist: Fatboy Slim
         title: Right here, right now
         youtube: https://www.youtube.com/watch?v=l7ZlSHGFfdc
+      - artist: Fatima Al Qadiri
+        title: Oubliette (Haiyti - Toulouse)
+        youtube: https://www.youtube.com/watch?v=DmC1XrcRsXw
       - artist: Forest Swords
         title: Crow
         youtube: https://www.youtube.com/watch?v=lan-Pjv99Xk
@@ -338,6 +371,9 @@ music:
       - artist: Honey Cocaine
         title: Gwola
         youtube: https://www.youtube.com/watch?v=L9UhVHcyQ44
+      - artist: IAMDDB
+        title: Leaned Out (feat. Inka)
+        youtube: https://www.youtube.com/watch?v=JJjVBe0zrHs
       - artist: Imany
         title: Don't be so shy
         youtube: https://www.youtube.com/watch?v=artkCpjfdiQ
@@ -392,6 +428,9 @@ music:
       - artist: Kendrick Lamar
         title: The Relevant
         youtube: https://www.youtube.com/watch?v=BuJ4AfA2o2M
+      - artist: Kid Ink
+        title: YUSO (feat. Lil Wayne, Saweetie)
+        youtube: https://www.youtube.com/watch?v=itohm9OYUz4
       - artist: Kiesza
         title: Hideaway
         youtube: https://www.youtube.com/watch?v=Vnoz5uBEWOA
@@ -485,6 +524,9 @@ music:
       - artist: Wilz
         title: Get Outta my Face
         youtube: https://www.youtube.com/watch?v=1RKvqCITai4
+      - artist: Young Money
+        title: We Alright (feat. Euro, Birdman, Lil Wayne)
+        youtube: https://www.youtube.com/watch?v=8cyUSC8ZJKk
     instrumentals:
       - artist: Abaz
         title: Dann bist du Azzlack
