Likes: Gaming Ambience

--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -635,6 +635,8 @@ games:
     youtube: https://www.youtube.com/watch?v=9T1rxI1AlmM
   - title: "Detroit: Become Human - Kara"
     youtube: https://www.youtube.com/watch?v=j-pF56-ZYkY
+  - title: "Gaming Ambience"
+    youtube: https://www.youtube.com/c/GamingAmbience/playlists
   - title: "Hellblade: Senua Sacrifice - Behind the Scenes"
     youtube: https://www.youtube.com/watch?v=uuTy2iHSODs
   - title: "Horizon Zero Dawn: Animation Reel"
