Deus Ex Main Theme

--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -38,6 +38,9 @@ music:
       - game: "Detroit: Become Human"
         title: Kara's Theme
         youtube: https://www.youtube.com/watch?v=2YNOJ3l8iEY
+      - game: "Deus Ex: Human Revolution"
+        title: Main Menu
+        youtube: https://www.youtube.com/watch?v=JpTcZJJ-lm0
       - game: EVE Online
         title: Akat Mountains
         youtube: https://www.youtube.com/watch?v=PsbI2hS5HZQ
