Tiberian Sun - Lone Trooper

--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -32,6 +32,9 @@ music:
       - game: Assassin's Creed Origins
         title: Main Theme
         youtube: https://www.youtube.com/watch?v=h4fOIVlEOIY
+      - game: "Command & Conquer: Tiberian Sun"
+        title: Lone Trooper
+        youtube: https://www.youtube.com/watch?v=YEywtFfEkAc
       - game: Crysis 2
         title: Main Theme
         youtube: https://www.youtube.com/watch?v=Iy4iQvJo24U
