Oni - East Wind

--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -68,6 +68,9 @@ music:
       - game: One Must Fall 2097
         title: Theme
         youtube: https://www.youtube.com/watch?v=UvlVaQl7kEk
+      - game: Oni
+        title: East Wind
+        youtube: https://www.youtube.com/watch?v=4lX2iP6uL_I
       - game: Portal
         title: The Device has been Modified
         youtube: https://www.youtube.com/watch?v=kuYT-d_fxpE
