System Shock 2 - Engineering

--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -80,6 +80,9 @@ music:
       - game: Portal
         title: The Device has been Modified
         youtube: https://www.youtube.com/watch?v=kuYT-d_fxpE
+      - game: System Shock 2
+        title: Engineering
+        youtube: https://www.youtube.com/watch?v=mtdQ5roMuEA
       - game: XCOM Enemy Unknown
         title: Main Menu
         youtube: https://www.youtube.com/watch?v=f-cdXsAAme0
