Matthias Kramm (Quiss): Freespin

--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -628,6 +628,9 @@ demoscene:
   - artist: Haujobb
     title: YouShould
     youtube: https://www.youtube.com/watch?v=fc9SEvCKck8
+  - artist: Quiss
+    title: Freespin
+    youtube: https://www.youtube.com/watch?v=zprSxCMlECA
   - artist: Quite
     title: ino
     youtube: https://www.youtube.com/watch?v=2pBqwsqPfUo
