--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -539,6 +539,9 @@ music:
       - artist: Stormzy
         title: Shut Up
         youtube: https://www.youtube.com/watch?v=RqQGUJK7Na4
+      - artist: Taigai
+        title: Ice
+        youtube: https://www.youtube.com/watch?v=9eSOXNCV190
       - artist: The Streets
         title: Blinded by the Lights
         youtube: https://www.youtube.com/watch?v=QJD8mpcGykE
