It takes two, Papers please

--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -674,6 +674,8 @@ games:
     youtube: https://www.youtube.com/watch?v=czMIP79Xr9o
   - title: "Horizon Zero Dawn: Making Of"
     youtube: https://www.youtube.com/watch?v=h9tLcD1r-6w
+  - title: "It Takes Two"
+    youtube: https://www.youtube.com/watch?v=yZ2VB6nbsUI
   - title: "Max Payne: First Nightmare"
     youtube: https://www.youtube.com/watch?v=G_Z2E6SYQnk
   - title: MS-DOS Games
@@ -685,7 +687,9 @@ games:
   - title: "Other Places: Dishonored"
     youtube: https://www.youtube.com/watch?v=M_tTlv44sV0
   - title: "Other Places: Mirror's Edge"
-    youtube: https://www.youtube.com/watch?v=RfUwQsCzkgs&
+    youtube: https://www.youtube.com/watch?v=RfUwQsCzkgs
+  - title: "Papers Please"
+    youtube: https://www.youtube.com/watch?v=YFHHGETsxkE
   - title: "Quake III: Amazing Rocket Jumps"
     youtube: https://www.youtube.com/watch?v=cMEQp5BZHO8
   - title: "Red Dead Redemption 2: Timelapse"
