--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -130,6 +130,9 @@ music:
       - artist: Elif
         title: Auf halber Strecke
         youtube: https://www.youtube.com/watch?v=KBmrF84lJPA
+      - artist: Flying Steps
+        title: We are Electric
+        youtube: https://www.youtube.com/watch?v=SEdreF32b90
       - artist: Frauenarzt
         title: 31er (feat. Taktlo$$, Nura SXTN)
         youtube: https://www.youtube.com/watch?v=Xxdcj_WBMEE
