--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -65,6 +65,9 @@ music:
       - game: Jazz Jackrabbit 2
         title: Lab Rat
         youtube: https://www.youtube.com/watch?v=BcpCEge159Y
+      - game: Mafia
+        title: Briefing Bad
+        youtube: https://www.youtube.com/watch?v=gY6BGPfrt04
       - game: Mirror's Edge
         title: Puzzle
         youtube: https://www.youtube.com/watch?v=fQ5SdMaQ0Dk
