--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -749,6 +749,8 @@ security:
     youtube: https://www.youtube.com/watch?v=VAmbWwAPZZo
   - title: PS4 fail0verflow
     youtube: https://www.youtube.com/watch?v=2A7V3GLWF6U
+  - title: LiveOverflow - Researching MissingNo Glitch in Pokemon
+    youtube: https://www.youtube.com/watch?v=p8OBktd42GI
   - title: Sega Saturn CD Cracked
     youtube: https://www.youtube.com/watch?v=jOyfZex7B3E
   - title: SMS Sniffing (GSM, A5)
