Mafia - Listen and Listen Good

--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -68,6 +68,9 @@ music:
       - game: Mafia
         title: Briefing Bad
         youtube: https://www.youtube.com/watch?v=gY6BGPfrt04
+      - game: Mafia
+        title: Listen and Listen Good
+        youtube: https://www.youtube.com/watch?v=ZHlYpnuIP1w&t=187s
       - game: Mirror's Edge
         title: Puzzle
         youtube: https://www.youtube.com/watch?v=fQ5SdMaQ0Dk
