--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -760,6 +760,11 @@ security:
     youtube: https://www.youtube.com/watch?v=TOl4Q4lyJTI
   - title: X86 Memory Sinkhole
     youtube: https://www.youtube.com/watch?v=lR0nh-TdpVg
+bitcoin:
+  - title: Buy the Dip
+    youtube: https://www.youtube.com/watch?v=Hk3T1FSlkYw
+  - title: "Why is Bitcoin going up, Mr. Musk?"
+    youtube: https://www.youtube.com/watch?v=5-h_-OuGMnE
 other:
   - title: 1UP Graffiti Olympics
     youtube: https://www.youtube.com/watch?v=HyjZ-zHzXN0
