Matrix - Neo on the Edge

--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -22,6 +22,9 @@ music:
       - movie: Requiem for a Dream
         title: Main Theme
         youtube: https://www.youtube.com/watch?v=2LhaXf3iTHo
+      - movie: The Matrix
+        title: Neo on the Edge
+        youtube: https://www.youtube.com/watch?v=LGrAlG-ue1k
     games:
       - game: Assassin's Creed 2
         title: Ezio's Family
