Likes: Yamaha CS-80 Demo (Blade Runner Synthesizer)

--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -793,3 +793,5 @@ other:
     youtube: https://www.youtube.com/watch?v=0jreg4e-lXY
   - title: "Walt Disney's The Old Mill (1937)"
     youtube: https://www.youtube.com/watch?v=MYEmL0d0lZE
+  - title: "Yamaha CS-80 Demo (Blade Runner Synthesizer)"
+    youtube: https://www.youtube.com/watch?v=GxKVY7nJPJE
