--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -65,6 +65,9 @@ music:
       - game: "Hellblade: Senua's Sacrifice"
         title: Passarella Death Squad - Just Like Sleep
         youtube: https://www.youtube.com/watch?v=10iydB3x0Yk
+      - game: "Hellblade: Senua's Sacrifice"
+        title: Sea of Corpses
+        youtube: https://www.youtube.com/watch?v=RaHtS6-FxpE
       - game: Jazz Jackrabbit 2
         title: Lab Rat
         youtube: https://www.youtube.com/watch?v=BcpCEge159Y
