--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -335,6 +335,9 @@ music:
       - artist: Bishop Briggs
         title: Hi-Lo (Hollow)
         youtube: https://www.youtube.com/watch?v=zHLD-aFahh8
+      - artist: Boris Brejcha
+        title: Art of Minimal Techno Cartoon Tripping - The Mad Doctor
+        youtube: https://www.youtube.com/watch?v=WddpRmmAYkg
       - artist: Buraka Som Sistema
         title: IC19
         youtube: https://www.youtube.com/watch?v=voOSqm7KFz4
