--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -19,6 +19,9 @@ music:
       - movie: Man on Fire
         title: The End
         youtube: https://www.youtube.com/watch?v=KPfJZolQOPU
+      - movie: Moon
+        title: Welcome to Lunar Industries
+        youtube: https://www.youtube.com/watch?v=_lAfMT5FIZE
       - movie: Requiem for a Dream
         title: Main Theme
         youtube: https://www.youtube.com/watch?v=2LhaXf3iTHo
