--- a/_data/likes.yml
+++ b/_data/likes.yml
@@ -4,6 +4,9 @@ music:
       - movie: A Beautiful Mind
         title: The Car Chase
         youtube: https://www.youtube.com/watch?v=9oKup7A7zks
+      - movie: Ex Machina
+        title: Bunsen Burner
+        youtube: https://www.youtube.com/watch?v=BgKhOv1xTmA
       - movie: Fight Club
         title: The Dust Brothers - What is Fight Club
         youtube: https://www.youtube.com/watch?v=qZhmQgw5VEI
