--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           npm ci
           npm run lint
           npm run check
-          ELEVENTY_PATH_PREFIX=/eleventy-sample npm run build -- --pathprefix=/eleventy-sample
+          npm run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
