--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eleventy-sample",
+  "name": "andreas-mausch-de",
   "version": "1.0.0",
   "scripts": {
     "dev": "eleventy --serve",
@@ -15,7 +15,6 @@
     "@11ty/eleventy": "2.0.0-canary.14",
     "@11ty/eleventy-img": "2.0.1",
     "@11ty/eleventy-plugin-directory-output": "1.0.1",
-    "@types/toastify-js": "1.11.1",
     "@typescript-eslint/eslint-plugin": "5.33.0",
     "@typescript-eslint/parser": "5.33.0",
     "autoprefixer": "10.4.8",
@@ -42,8 +41,7 @@
     "img-comparison-slider": "7.7.2",
     "katex": "0.16.0",
     "prism-themes": "1.9.0",
-    "swiffy-slider": "1.5.3",
-    "toastify-js": "1.12.0"
+    "swiffy-slider": "1.5.3"
   },
   "pre-commit": [
     "lint",
