--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-[*.{js,ts,json,scss,yml,yaml}]
+[*.{js,ts,json,scss,yml,yaml,njk,html}]
 charset = utf-8
 indent_style = space
 indent_size = 2
