--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "4.7.4"
   },
   "dependencies": {
+    "@fontsource/raleway": "4.5.10",
     "@fortawesome/fontawesome-free": "6.2.0",
     "img-comparison-slider": "7.7.2",
     "katex": "0.16.0",
