--- a/.stylelintrc.yml
+++ b/.stylelintrc.yml
@@ -1,6 +1,7 @@
 extends: stylelint-config-sass-guidelines
 rules:
   max-nesting-depth: 2
+  selector-max-id: 1
   selector-no-qualifying-type: null
   string-quotes: double
   scss/at-import-no-partial-leading-underscore: null
