--- a/_data/likes.yaml
+++ b/_data/likes.yaml
@@ -31,6 +31,9 @@ music:
       - movie: The Matrix
         title: Neo on the Edge
         youtube: https://www.youtube.com/watch?v=LGrAlG-ue1k
+      - movie: Unbreakable
+        title: Visions
+        youtube: https://www.youtube.com/watch?v=nsSDFwKh2h0
     games:
       - game: Assassin's Creed 2
         title: Ezio's Family
