--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@11ty/eleventy": "2.0.0-canary.14",
     "@11ty/eleventy-img": "2.0.1",
     "@11ty/eleventy-plugin-directory-output": "1.0.1",
+    "@11ty/eleventy-plugin-rss": "1.2.0",
     "@fortawesome/fontawesome-free": "6.2.0",
     "@typescript-eslint/eslint-plugin": "5.37.0",
     "@typescript-eslint/parser": "5.37.0",
