--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@typescript-eslint/parser": "5.37.0",
     "autoprefixer": "10.4.9",
     "eleventy-plugin-emoji": "1.1.0",
-    "eleventy-plugin-toc": "1.1.5",
+    "eleventy-plugin-nesting-toc": "1.3.0",
     "eleventy-sass": "2.1.2",
     "esbuild": "0.15.7",
     "eslint": "8.23.1",
