--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "npm run lint:scripts && npm run lint:scss",
     "lint:scripts": "eslint --ignore-pattern !.eleventy.js ./.eleventy.js ./eleventy/**/*.js ./scripts/**/*.ts",
     "lint:scss": "stylelint ./styles/**/*.scss",
-    "check": "tsc",
+    "check:typescript": "tsc",
+    "check:links": "linkinator --skip=linkedin.com,github.com --recurse --timeout 3000 --verbosity error ./_site/",
     "clean": "rimraf ./_site/"
   },
   "license": "MIT",
@@ -35,6 +36,7 @@
     "eslint": "8.28.0",
     "glob": "8.0.3",
     "icon-font-buildr": "1.4.2",
+    "linkinator": "4.1.1",
     "markdown-it-anchor": "8.6.5",
     "markdown-it-attribution": "0.1.4",
     "markdown-it-attrs": "4.1.4",
@@ -51,6 +53,6 @@
   },
   "pre-commit": [
     "lint",
-    "check"
+    "check:typescript"
   ]
 }
