--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,7 +20,7 @@ jobs:
         run: |
           npm ci
           npm run lint
-          npm run check:typescript
+          npm run check:types
           npm run build
 
       - name: Deploy
