--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "ELEVENTY_ENV=development eleventy --serve",
     "build": "ELEVENTY_ENV=production eleventy",
-    "generate:font": "icon-font-buildr --config ../../../../icon-font.json",
+    "generate:font": "mkdirp ./_site/styles/icons/ && iconism --output ./_site/styles/icons/ --types ttf,woff2 --assets css --prefix icon --debug ./icon-font.json",
     "lint": "npm run lint:scripts && npm run lint:scss",
     "lint:scripts": "eslint --ignore-pattern !.eleventy.js ./.eleventy.js ./eleventy/**/*.js ./scripts/**/*.ts",
     "lint:scss": "stylelint ./styles/**/*.scss",
@@ -35,7 +35,7 @@
     "esbuild": "0.15.16",
     "eslint": "8.28.0",
     "glob": "8.0.3",
-    "icon-font-buildr": "1.4.2",
+    "iconism": "1.2.3",
     "linkinator": "4.1.1",
     "markdown-it-anchor": "8.6.5",
     "markdown-it-attribution": "0.1.4",
@@ -44,6 +44,7 @@
     "markdown-it-footnote": "3.0.3",
     "markdown-it-prism": "2.3.0",
     "markdown-it-task-checkbox": "1.0.6",
+    "mkdirp": "2.1.3",
     "postcss": "8.4.19",
     "pre-commit": "1.2.2",
     "rimraf": "3.0.2",
