--- a/_data/likes.yaml
+++ b/_data/likes.yaml
@@ -341,6 +341,9 @@ music:
       - artist: Baby Soulja
         title: Turnt Up (feat. Miss Barbie)
         youtube: https://www.youtube.com/watch?v=R6CY-RLka0I
+      - artist: Bicep
+        title: Apricots
+        youtube: https://www.youtube.com/watch?v=Govg_XmORLE
       - artist: Bishop Briggs
         title: Hi-Lo (Hollow)
         youtube: https://www.youtube.com/watch?v=zHLD-aFahh8
@@ -350,6 +353,9 @@ music:
       - artist: Buraka Som Sistema
         title: IC19
         youtube: https://www.youtube.com/watch?v=voOSqm7KFz4
+      - artist: Burna Boy
+        title: Killin Dem
+        youtube: https://www.youtube.com/watch?v=_EfSs6-Pxx8
       - artist: Chick Norris
         title: Made Me Do
         youtube: https://www.youtube.com/watch?v=UdcPrOmi2DE
