--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
+    "lib": [ "dom", "es2015" ],
     "noEmit": true,
     "noImplicitAny": true
   },
