--- a/package.json
+++ b/package.json
@@ -14,43 +14,43 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@fontsource/raleway": "4.5.11",
-    "img-comparison-slider": "7.8.1",
-    "katex": "0.16.3",
+    "@fontsource/raleway": "4.5.12",
+    "img-comparison-slider": "8.0.0",
+    "katex": "0.16.4",
     "prism-themes": "1.9.0",
     "swiffy-slider": "1.6.0"
   },
   "devDependencies": {
-    "@11ty/eleventy": "2.0.0-canary.14",
-    "@11ty/eleventy-img": "2.0.1",
+    "@11ty/eleventy": "2.0.1",
+    "@11ty/eleventy-img": "3.1.0",
     "@11ty/eleventy-plugin-directory-output": "1.0.1",
     "@11ty/eleventy-plugin-rss": "1.2.0",
-    "@fortawesome/fontawesome-free": "6.2.1",
-    "@typescript-eslint/eslint-plugin": "5.45.0",
-    "@typescript-eslint/parser": "5.45.0",
-    "autoprefixer": "10.4.13",
+    "@fortawesome/fontawesome-free": "6.4.0",
+    "@typescript-eslint/eslint-plugin": "5.57.1",
+    "@typescript-eslint/parser": "5.57.1",
+    "autoprefixer": "10.4.14",
     "eleventy-plugin-emoji": "1.1.0",
     "eleventy-plugin-nesting-toc": "1.3.0",
-    "eleventy-sass": "2.1.3",
-    "esbuild": "0.15.16",
-    "eslint": "8.28.0",
-    "glob": "8.0.3",
+    "eleventy-sass": "2.2.1",
+    "esbuild": "0.17.15",
+    "eslint": "8.38.0",
+    "glob": "9.3.4",
     "iconism": "1.2.3",
-    "linkinator": "4.1.1",
-    "markdown-it-anchor": "8.6.5",
+    "linkinator": "4.1.2",
+    "markdown-it-anchor": "8.6.7",
     "markdown-it-attribution": "0.1.4",
-    "markdown-it-attrs": "4.1.4",
+    "markdown-it-attrs": "4.1.6",
     "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "3.0.3",
     "markdown-it-prism": "2.3.0",
     "markdown-it-task-checkbox": "1.0.6",
-    "mkdirp": "2.1.3",
-    "postcss": "8.4.19",
+    "mkdirp": "2.1.6",
+    "postcss": "8.4.21",
     "pre-commit": "1.2.2",
-    "rimraf": "3.0.2",
-    "stylelint": "14.15.0",
-    "stylelint-config-sass-guidelines": "9.0.1",
-    "typescript": "4.9.3"
+    "rimraf": "4.4.1",
+    "stylelint": "15.4.0",
+    "stylelint-config-sass-guidelines": "10.0.0",
+    "typescript": "5.0.4"
   },
   "pre-commit": [
     "lint",
