Likes: Kanye West - Fade

--- a/_data/likes.yaml
+++ b/_data/likes.yaml
@@ -461,6 +461,9 @@ music:
       - artist: Joey Bada$$
         title: Unorthodox
         youtube: https://www.youtube.com/watch?v=2d307wz-dHk
+      - artist: Kanye West
+        title: Fade
+        youtube: https://www.youtube.com/watch?v=IxGvm6btP1A
       - artist: Kendrick Lamar
         title: Black Friday (feat. J Cole)
         youtube: https://www.youtube.com/watch?v=okF5gOTX9uM
