--- a/pdf/package.json
+++ b/pdf/package.json
@@ -6,10 +6,10 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "resume": "chrome-headless-render-pdf --url=http://localhost:4000/resume/ --pdf=resume.pdf --include-background --no-margins --paper-width=8.26 --paper-height=11.69",
+    "resume": "chrome-headless-render-pdf --url=http://127.0.0.1:4000/resume/ --pdf=resume.pdf --include-background --no-margins --paper-width=8.26 --paper-height=11.69",
     "projects": "chrome-headless-render-pdf --url=http://localhost:4000/projects/ --pdf=projects.pdf --include-background --no-margins --paper-width=8.26 --paper-height=11.69"
   },
   "devDependencies": {
-    "chrome-headless-render-pdf": "1.9.0"
+    "chrome-headless-render-pdf": "1.11.0"
   }
 }
