--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:scss": "stylelint ./styles/**/*.scss",
     "check:types": "tsc",
     "check:links": "linkinator --skip=linkedin.com,github.com --recurse --timeout 3000 --verbosity error ./_site/",
-    "clean": "rimraf ./_site/"
+    "clean": "rimraf ./_site/",
+    "postinstall": "download https://github.com/plantuml/plantuml/releases/download/v1.2024.6/plantuml-1.2024.6.jar --out . --filename plantuml.jar"
   },
   "license": "MIT",
   "dependencies": {
@@ -29,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
     "autoprefixer": "10.4.19",
+    "download-cli": "1.1.1",
     "eleventy-plugin-emoji": "1.1.0",
     "eleventy-plugin-nesting-toc": "1.3.0",
     "eleventy-sass": "2.2.4",
