Raspberry Pi: Use single quotes for SSH key
it might contain special characters we don't want to
be interpreted by bash

--- a/posts/2024-08-31-single-board-computer-headless-setup/raspberry-pi/bookworm/firstrun.env
+++ b/posts/2024-08-31-single-board-computer-headless-setup/raspberry-pi/bookworm/firstrun.env
@@ -11,4 +11,4 @@ MY_WIFI_COUNTRY="DE"
 
 MY_KEYBOARD_LAYOUT="us"
 
-MY_SSH_KEY="ssh-rsa AAAAB3... openpgp:0x01234567"
+MY_SSH_KEY='ssh-rsa AAAAB3... openpgp:0x01234567'
