--- a/blog/2024-08-31-single-board-computer-headless-setup/raspberry-pi/bookworm/firstrun.env
+++ b/blog/2024-08-31-single-board-computer-headless-setup/raspberry-pi/bookworm/firstrun.env
@@ -11,4 +11,4 @@ MY_WIFI_COUNTRY="DE"
 
 MY_KEYBOARD_LAYOUT="us"
 
-MY_SSH_KEY="ssh-rsa AAAAB3... openpgp:0x01234567"
+MY_SSH_KEY='ssh-rsa AAAAB3... openpgp:0x01234567'
