They are Billions - Final Swarm Theme

--- a/_data/likes.yaml
+++ b/_data/likes.yaml
@@ -104,6 +104,9 @@ music:
       - game: System Shock 2
         title: Engineering
         youtube: https://www.youtube.com/watch?v=mtdQ5roMuEA
+      - game: They are Billions
+        title: Final Swarm Theme
+        youtube: https://www.youtube.com/watch?v=qht8FHOqr7I
       - game: XCOM Enemy Unknown
         title: Main Menu
         youtube: https://www.youtube.com/watch?v=f-cdXsAAme0
