--- a/_data/likes.yaml
+++ b/_data/likes.yaml
@@ -670,6 +670,9 @@ demoscene:
   - artist: Haujobb
     title: YouShould
     youtube: https://www.youtube.com/watch?v=fc9SEvCKck8
+  - artist: Kewlers
+    title: "1995"
+    youtube: https://www.youtube.com/watch?v=weGYilwd1YI
   - artist: Quiss
     title: Freespin
     youtube: https://www.youtube.com/watch?v=zprSxCMlECA
