--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "glob": "10.3.14",
     "iconism": "1.2.3",
     "linkinator": "6.0.4",
+    "markdown-it": "14.1.0",
     "markdown-it-anchor": "8.6.7",
     "markdown-it-attribution": "0.1.4",
     "markdown-it-attrs": "4.1.6",
