Use new style of fontsource mixins

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@fontsource/raleway": "5.2.5",
+    "@fontsource-variable/raleway": "5.2.5",
     "img-comparison-slider": "8.0.6",
     "katex": "0.16.21",
     "prism-themes": "1.9.0",
@@ -27,10 +27,11 @@
     "@11ty/eleventy-img": "6.0.1",
     "@11ty/eleventy-plugin-directory-output": "1.0.1",
     "@11ty/eleventy-plugin-rss": "2.0.3",
-    "@fortawesome/fontawesome-free": "6.7.2",
     "@emotion/core": "10.3.1",
     "@emotion/styled": "10.3.0",
     "@eslint/compat": "1.2.7",
+    "@fontsource-utils/scss": "0.2.1",
+    "@fortawesome/fontawesome-free": "6.7.2",
     "@types/toastify-js": "1.12.3",
     "@typescript-eslint/eslint-plugin": "8.27.0",
     "@typescript-eslint/parser": "8.27.0",
