Likes: Cyberpunk 2077 and Shadow of the Tomb Raider

--- a/_data/likes.yaml
+++ b/_data/likes.yaml
@@ -743,6 +743,10 @@ games:
     youtube: https://www.youtube.com/watch?v=kXh1JJ_Jtew
   - title: "StarCraft II: DeepMind"
     youtube: https://www.youtube.com/watch?v=cUTMhmVh1qs
+  - title: The Beauty of Cyberpunk 2077 - Vol. 2
+    youtube: https://www.youtube.com/watch?v=8t0Dr-WCxqs
+  - title: The Beauty of Shadow of the Tomb Raider
+    youtube: https://www.youtube.com/watch?v=__fFE5ZST2I
   - title: "The Environments in Deus Ex: Mankind Divided"
     youtube: https://www.youtube.com/watch?v=eMFL7ettk7Y
 ads:
