--- a/_data/likes.yaml
+++ b/_data/likes.yaml
@@ -542,6 +542,9 @@ music:
       - artist: Mogwai
         title: Hungry Face
         youtube: https://www.youtube.com/watch?v=BYSdLYmfQG4
+      - artist: MOLIY, Shenseea, Skillibeng, Silent Addy
+        title: Shake It To The Max
+        youtube: https://www.youtube.com/watch?v=UjBhbMMgLzc
       - artist: Nicky Minaj
         title: Dirty Money
         youtube: https://www.youtube.com/watch?v=w56UQK7QpBw
