Likes: Add songs

--- a/_data/likes.yaml
+++ b/_data/likes.yaml
@@ -470,6 +470,9 @@ music:
       - artist: Joey Bada$$
         title: Unorthodox
         youtube: https://www.youtube.com/watch?v=2d307wz-dHk
+      - artist: Joey Valence & Brae
+        title: The Baddest
+        youtube: https://www.youtube.com/watch?v=eIhbEPMrl38
       - artist: Kanye West
         title: Fade
         youtube: https://www.youtube.com/watch?v=IxGvm6btP1A
@@ -602,6 +605,9 @@ music:
       - artist: Tyga
         title: Nann Nigga (feat. Honey Cocaine)
         youtube: https://www.youtube.com/watch?v=Mlvl162RnsE
+      - artist: Uncle Waffles & Royal Musiq
+        title: Zenzele
+        youtube: https://www.youtube.com/watch?v=MHcp9rRPIWQ
       - artist: Vision of Escaflowne
         title: Shadow of Doubt
         youtube: https://www.youtube.com/watch?v=TYf7NluE5D4
