Likes: William Seven - The Apple (FISM Act)

--- a/_data/likes.yaml
+++ b/_data/likes.yaml
@@ -835,6 +835,8 @@ other:
     youtube: https://www.youtube.com/watch?v=TNdGX0gszi8
   - title: Usain Bolt's Bio Mechanics explained by Michael Johnson
     youtube: https://www.youtube.com/watch?v=Wdm7xwT-vEQ
+  - title: "William Seven: The Apple (FISM Québec 2022)"
+    youtube: https://www.youtube.com/watch?v=Qo22LcHNFqY
   - title: "The Matrix: Previz Fights"
     youtube: https://www.youtube.com/watch?v=0jreg4e-lXY
   - title: "Walt Disney's The Old Mill (1937)"
