--- a/_data/likes.yaml
+++ b/_data/likes.yaml
@@ -383,6 +383,9 @@ music:
       - artist: Das EFX
         title: Real Hip Hop
         youtube: https://www.youtube.com/watch?v=QbulmeDErOk
+      - artist: David Guetta & Sia
+        title: Beautiful People
+        youtube: https://www.youtube.com/watch?v=S2fSojJqyNY
       - artist: Delerium
         title: Consensual Worlds
         youtube: https://www.youtube.com/watch?v=J5noeRPMBjE
