Likes: Tron Legacy, Daft Punk - Rinzler

--- a/_data/likes.yaml
+++ b/_data/likes.yaml
@@ -31,6 +31,9 @@ music:
       - movie: The Matrix
         title: Neo on the Edge
         youtube: https://www.youtube.com/watch?v=LGrAlG-ue1k
+      - movie: Tron Legacy
+        title: Daft Punk - Rinzler
+        youtube: https://www.youtube.com/watch?v=hPbx8TEtOxQ
       - movie: Unbreakable
         title: Visions
         youtube: https://www.youtube.com/watch?v=nsSDFwKh2h0
