Likes: Blur - Smile

--- a/_data/likes.yaml
+++ b/_data/likes.yaml
@@ -50,9 +50,12 @@ music:
       - game: "Beyond: Two Souls"
         title: The Infraworld
         youtube: https://www.youtube.com/watch?v=_tptRvVV-HA
-      - game: "Brotato"
-        title: "After Midnight"
-        youtube: "https://www.youtube.com/watch?v=ECs5UMHga28"
+      - game: Blur
+        title: The Crystal Method - Smile
+        youtube: https://www.youtube.com/watch?v=9JaDa8H6tlY
+      - game: Brotato
+        title: After Midnight
+        youtube: https://www.youtube.com/watch?v=ECs5UMHga28
       - game: "Command & Conquer: Tiberian Sun"
         title: Lone Trooper
         youtube: https://www.youtube.com/watch?v=YEywtFfEkAc
