Likes: Remember Me

--- a/_data/likes.yaml
+++ b/_data/likes.yaml
@@ -757,6 +757,8 @@ games:
     youtube: https://www.youtube.com/watch?v=cMEQp5BZHO8
   - title: "Red Dead Redemption 2: Timelapse"
     youtube: https://www.youtube.com/watch?v=aQy8XfkfkUA
+  - title: Remember Me
+    youtube: https://www.youtube.com/watch?v=f66O5zK6h34
   - title: "Serious Sam: Making Of"
     youtube: https://www.youtube.com/watch?v=kXh1JJ_Jtew
   - title: "StarCraft II: DeepMind"
